(include link.dune.inc)

(rule
 (deps
  (glob_files cases/*))
 ;  (enabled_if
 ;   (>= %{ocaml_version} 4.10))
 (action
  (with-stdout-to
   link.dune.inc.gen
   (pipe-stdout
    (run gen_rules/gen_rules.exe)
    (run dune format-dune-file)))))

(rule
 ;  (enabled_if
 ;   (>= %{ocaml_version} 4.10))
 (alias runtest)
 (action
  (diff link.dune.inc link.dune.inc.gen)))

(library
 (name gen_rules_lib)
 (libraries sexplib0 unix fpath)
 (enabled_if
  (>= %{ocaml_version} 4.04)))
